user field update

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 MONGODB_CONNECTION_STRTING = mongodb+srv://zubairdev:1122334455@cluster0-568pi.mongodb.net/test?retryWrites=true&w=majority
 FROM_EMAIL = zubairfloat@gmail.com
 EMAIL_PASSWORD = 03234955970
+DEPLOY_HEROKU: https://nodejs-float.herokuapp.com/
